--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.11.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^8.8.4",
+    "start": "^5.1.0"
   }
 }
