--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.11.0",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.8.4",
-    "start": "^5.1.0",
-    "pull": "^2.1.1"
+    "passport": "^0.7.0",
+    "pull": "^2.1.1",
+    "start": "^5.1.0"
   }
 }
