--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongodb": "^6.11.0",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.8.4",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pull": "^2.1.1",
     "start": "^5.1.0"
   }
